<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item android:id="@+id/action_send_data"
          android:title="@string/button_send_data"
          android:icon="@drawable/ic_action_email"
          android:showAsAction="always" />
    <item android:id="@+id/action_add_project"
          android:title="@string/button_add_project"
        android:icon="@drawable/ic_action_view_as_list"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_task"
          android:title="@string/button_add_project"
        android:icon="@drawable/ic_action_new_event"
        android:showAsAction="always" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never"/>


</menu>
