<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  tools:context=".MainActivity">

        <Button
            android:id="@+id/button_add_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_project"
            />

        <Button
            android:id="@+id/button_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_task"
            />
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:text="@string/projects_list_title"
        android:textColor="@color/Peru"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/projectListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>
